--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,8 +35,8 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  http:
   dio: 
+  provider: 
   shimmer: ^2.0.0
   cupertino_icons: ^1.0.2
 
