--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,13 +19,17 @@ dependencies:
   #state management 
   provider: 
   
+  #json
+  json_annotation:
+  
   cupertino_icons: ^1.0.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  
+  json_serializable: 
+  build_runner: 
   flutter_lints: ^2.0.0
 
 flutter:
